<resources>
    <string name="app_name">LoginActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">LOGIN</string>
    <string name="sign_in">SIGN IN</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_sign_up">Already Have an Account? Sign Up</string>
    <string name="name">Name</string>
    <string name="enter_username">Enter Username</string>
    <string name="name1">Name</string>
    <string name="enter_username1">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="already_have_an_account_sign_in">Already Have an Account? Sign In</string>
    <string name="sign_up_for_a_new_account">Sign Up for a New Account</string>
    <string name="register">Register</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="notification_fragment">Notification Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="chat_fragment">Chat Fragment</string>
    <string name="don_t_have_an_account_sign_up">Don\'t_have_an_account_sign_up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="home1">Home</string>
    <string name="interests">Interests</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="journalism">Journalism</string>
    <string name="automobile">Automobile</string>
    <string name="history">History</string>
    <string name="environment">Environment</string>
    <string name="politics">Politics</string>
    <string name="philosophy">Philosophy</string>
    <string name="biology">Biology</string>
    <string name="current_affairs">Current Affairs</string>
    <string name="tests">Tests</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="home2">Home</string>
    <string name="science1">Science</string>
    <string name="physical_education">Physical Education</string>
    <string name="arts">Arts</string>
    <string name="commerce">Commerce</string>
    <string name="technology">Technology</string>
    <string name="current_affairs1">Current Affairs</string>
    <string name="tests1">Tests</string>
    <string name="share1">Share</string>
    <string name="feedback1">Feedback</string>
    <string name="edura">EDURA</string>
    <string name="annuuu">\@annuuu</string>
    <string name="navigation_drawer_tutorial">Navigation Drawer Tutorial</string>
    <string name="todo11">TODO</string>
    <string name="federick_johan">Federick Johan</string>
    <string name="federick_johans_gmail_com">federick_johans@gmail.com</string>
    <string name="todo12">TODO</string>
    <string name="todo13">TODO</string>
    <string name="delete">Delete</string>
    <string name="todo14">TODO</string>
    <string name="settings">Settings</string>
    <string name="todo15">TODO</string>
    <string name="log_out">Log Out</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="status">Status</string>
    <string name="student">Student</string>
    <string name="dob">DOB</string>
    <string name="_25_07_2022">25-07-2022</string>
    <string name="qualification">Qualification</string>
    <string name="state">State</string>
    <string name="mca">MCA</string>
    <string name="new_delhi">New Delhi</string>
    <string name="home11">Home</string>
    <string name="todo21">TODO</string>
</resources>