<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
        <item
            android:id="@+id/nav_Home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home2"
            tools:ignore="HardcodedText" />

        <item android:title="@string/interests">
            <menu>
                <item
                    android:id="@+id/nav_science"
                    android:icon="@drawable/ic_baseline_science_24"
                    android:title="@string/science1"/>

                <item
                    android:id="@+id/nav_arts"
                    android:icon="@drawable/ic_history"
                    android:title="@string/arts"
                    tools:ignore="HardcodedText" />

                <item
                    android:id="@+id/nav_commerce"
                    android:icon="@drawable/ic_commerce"
                    android:title="@string/commerce"
                    tools:ignore="HardcodedText" />

                <item
                    android:id="@+id/nav_technology"
                    android:icon="@drawable/ic_biology"
                    android:title="@string/technology"
                    tools:ignore="HardcodedText" />

                <item
                    android:id="@+id/nav_physicaleducation"
                    android:icon="@drawable/ic_baseline_sports_martial_arts_24"
                    android:title="@string/physical_education"
                    tools:ignore="HardcodedText" />
            </menu>
        </item>


        <item
            android:id="@+id/nav_currentaffairs"
            android:icon="@drawable/ic_baseline_newspaper_24"
            android:title="@string/current_affairs1"
            tools:ignore="HardcodedText" />
        <item
            android:id="@+id/nav_tests"
            android:icon="@drawable/ic_baseline_edit_attributes_24"
            android:title="@string/tests1" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/share1"/>
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_baseline_rate_review_24"
            android:title="@string/feedback1"/>

</menu>

